# GNSS-App

./: .editorconfig  .gitignore  COPILOT_MASTER_PLAN.md  LICENSE  Makefile  README.md
.github/workflows/: android_ci.yml  android_release.yml  contract_ci.yml  pi_ci.yml
android/: gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts
docs/: CONTEXT.md  field_install_guide.md  troubleshooting.md
docs/architecture/: api_contract.md  data_model.md  overview.md  security_pairing.md
docs/demo/: demo_script.md  recording_checklist.md
docs/issues/: issue-001-health-endpoint.md  issue-001-health.md  issue-002-telemetry-ws.md  issue-003-android-connect-ui.md  issue-003-android-connect.md  issue-004-openapi-schemas.md  issue-005-parity-docs.md
docs/parity/: checklist.md  manual_tests.md  verification_workbook.md
docs/ux/: nav_map.md  screen_specs.md
pi/: README.md  pyproject.toml
pi/config/: gnss-gateway.example.yaml
pi/src/gnss_gateway/: config.py  logging_sessions.py  main.py  nmea_parser.py  ntrip_client.py  projects_store.py  raw_observations.py  rinex_writer.py  serial_io.py  ubx_passthrough.py  ws_telemetry.py
pi/src/gnss_gateway/jobs/: rinex_convert_stub.py  runner.py
pi/systemd/: gnss-gateway.service
pi/tests/: test_health.py  test_nmea_parser.py  test_ntrip.py  test_projects.py  test_rinex.py
scripts/ci/: check_openapi.sh  lint_all.sh
scripts/deploy/: install_pi_service.sh  provision_pi_wifi_ap.sh  update_pi_service.sh
scripts/dev/: e2e_smoke.sh  gen_demo_bundle.sh  mock_gnss_replay.py  run_android_emulator.sh  (+1 more)
(+96 files in other folders)
