[project]
name = "gnss-gateway"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pyyaml"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
